@@ -1,3 +1,4 @@
+1.3.30-0 @05/09/2010 02:45:00 UTC@
 1.3.29-0 @04/28/2010 11:50:00 UTC@
 1.3.28-0 @03/25/2010 15:35:00 UTC@
 1.3.27-0 @02/13/2010 15:45:00 UTC@
