@@ -1,8 +1,13 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+May-08-2010 patrick     Changed window/mouse interaction for the X11 case.
+                        Submitted by Doug McCorkle.
+                        NEW VERSION: 1.3.30
 Apr-28-2010 patrick     Changed window/mouse interaction on Mac OS X.
+                        Submitted by Doug McCorkle.
                         NEW VERSION: 1.3.29
 Mar-25-2010 patrick     Changed window/mouse interaction on Windows.
+                        Submitted by Doug McCorkle.
                         NEW VERSION: 1.3.28
 Feb-13-2010 patrick     Fixed mouse lock state tracking in input areas. The
                         pure virtual methods in gadget::InputArea are now
